# upjab

./: .gitignore  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_mypackages.txt  setup.py  uvicorn_app.py
CODE_SOUP/: Sandbox01_a.py  d01.py  d03.py  demo__v0001.py  gradio_Button001.py  gradio_apps.py  video_presets.py  video_utils.py
CODE_SOUP/InformationTheoryPNU_FinalProject_ActiveLearning/: N01_to_image.py  N02_create_dataset.py  N03_random_sample.py  N04_dataset.py  N04_getDataset.py  N04_main.py  N04_model.py  N04_resnet.py  N05_detect.py  N05_histogram_folder_changeweight_movefolder.py  N06_PlotHist.py  N07_group_random_sample_movefolder.py  N08_PlotHist_Samp.py  N09_merge_labeled_movefolder.py  N10_main.py  N11_PlotGain.py  readme.md
CODE_SOUP/LLM_PNU_practice_code/: practice01.py  practice02.py  practice03.py  practice04.py  practice05.py
CODE_SOUP/plot_gallery/: MCMC_Metropolis-Hastings.py  PaperActiveLearning_dualAxis_histo_percent.py  line_with_marker.py
data/configs/: learn_yaml.yaml  test.yaml
demo/: CropReconShow_ActiveVision_v0.1.1.py  config_read_module.py  demo__v0001.py  index.html  loguru_demo.py  omegaconf_demo.py  python_ActiveVision_FirstGlimpsesonMNIST_v0.1.2.py  sandbox.py  zz_sandbox01.py
demo/ActiveVision_FirstGlimpsesonMNIST/: README.md  index.html  make_samples.py  style.css
demo/build_cu_cpp_NoPackage/: add_test.py  readme.md  setup.py
demo/gaussian_process/: GP01.py
demo/gurobipy_example/: README.md  homework01_question4.py  homework02_question3.py  homework02_question4.py
demo/gurobipy_examples/: homework01_question1.py  homework02_question1.py  homework02_question2.py  homework02_question3.py  homework02_question4.py
demo/pytorch_model_visualize/: tensorboard_example.py  torchview_example.py
docs/: index.html
docs/ActiveVision_FirstGlimpsesonMNIST/: README.md  app.js  index.html  (+1 more)
extra_packages/ThreeThreadsTool_HeavyModel_On_VideoStream_Tool/: README.md  pyproject.toml  requirements.txt
extra_packages/ThreeThreadsTool_HeavyModel_On_VideoStream_Tool/ThreeThreadsTool_heavymodel_on_videostream/: FrameQueue_module.py  MainLoop_module.py  ModelThread_module.py  VideoGet_module.py  VideoShow_module.py  __init__.py
extra_packages/ThreeThreadsTool_HeavyModel_On_VideoStream_Tool/scripts/: create_timer_video.py  demo_model.py  play_me.py
extra_packages/reinforcement_learning_PNU_course/: pyproject.toml
extra_packages/reinforcement_learning_PNU_course/reinforcement_learning_PNU/: MC_TD_environment.py  REINFORCE_environment.py  __init__.py  policy_iteration_environment.py  q_learning_environment.py  sarsa_environment.py  value_iteration_environment.py
extra_packages/reinforcement_learning_PNU_course/scripts/: DQN_mountaincar.py  REINFORCE_agent.py  deep_sarsa_agent.py  mc_agent.py  policy_iteration.py  q_learning_agent.py  sarsa_agent.py  td_agent.py
extra_packages/reinforcement_learning_PNU_course/scripts/tensorflow_model_original/: deep_sarsa_agent.py  reinforce_agent.py
extra_packages/reinforcement_learning_PNU_course/scripts/tensorflow_model_original/DQN/: DQN.py
extra_packages/reinforcement_learning_PNU_course/scripts/tensorflow_model_original/DQN/experiments/: exp_v02.py  exp_v03.py  exp_v04.py  exp_v06.py  exp_v09.py  plot_all.py
extra_packages/upjab_gradio/: pyproject.toml  requirements.txt
extra_packages/upjab_gradio/upjab_gradio/: __init__.py
extra_packages/upjab_gradio/upjab_gradio/learn/: d000.py  d008.py  d012.py  d013.py  d014.py  d015.py  d016.py  d020.py  d024.py  d065.py  d076.py  d078.py  d080.py  fix_audio.py
extra_packages/upjab_gradio/upjab_gradio/playground/: fix_audio.py  fix_openai.py  sandbox03.py  sandbox04.py
extra_packages/upjab_gradio/upjab_gradio/show_me/: d000.py  d001.py  d004.py  d005.py  d006.py  d007.py  d008.py  d009.py  d010.py  d012.py  d014.py  d015.py  d016.py  d017.py  d018.py  d020.py  d021.py  d022.py  d023.py  d025.py  d026.py  d028.py  d029.py  d030.py  d031.py  d033.py  d034.py  d035.py  d036.py  d037.py  d038.py  d040.py  d041.py  d042.py  d043.py  d044.py  d045.py  d046.py  d047.py  d048.py  (+32 more)
script/: clean_up.py  show.py  web.py
scripts/: clean_up.py  run01.py  run02.py  web.py
upjab/: __init__.py  show.py
uu/: d02.py  d03.py  d05.py  random_erasing.py
(+428 files in other folders)
