[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "upjab"
version = "0.1.0"
dependencies = [
  # "httpx",
  # "gidgethub[httpx]>4.0.0",
  # "django>2.1; os_name != 'nt'",
  # "django>2.0; os_name == 'nt'",
  # "hababa @ file:///${PROJECT_ROOT}/CODE_SOUP/hababa",
  # "hababa @ {root:uri}/CODE_SOUP/hababa",
  # "hababa @ CODE_SOUP/hababa",
  # "hababa @ file://CODE_SOUP/hababa",
  # "-e ./CODE_SOUP/hababa",
]

# dynamic = ["dependencies"]
# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}


requires-python = ">=3.8"
authors = [
  {name = "GG", email = "a@b.c"},
#   {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
#   {name = "Another person"},
#   {email = "different.person@example.com"},
]
# maintainers = [
#   {name = "Brett Cannon", email = "brett@example.com"}
# ]
# description = "Lovely Spam! Wonderful Spam!"
# readme = "README.md"
# license = {file = "LICENSE.txt"}
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"